<resources>
    <string name="app_name">Memory Game</string>
    <string name="scrolling_text">Welcome to Memory Game! Please enter the website URL to choose pictures.</string>
    <string name="url_placeholder">URL</string>
    <string name="fetch_buttontext">Fetch</string>
    <string name="start_buttontext">Start Game</string>
    <string name="back_buttontext">Back</string>
    <string name="save_buttontext">Save Changes</string>
    <string name="default_buttontext">Restore Default</string>
    <string name="score">Score: 0</string>
    <string name="recyclerImageView">ImageView in RecyclerView</string>
    <string name="action_settings">Settings</string>
    <string name="fetch_settings">Fetch maximum items: </string>
    <string name="grid_settings">Images per row: </string>
    <string name="glide_settings">Enable Glide library: </string>
    <string name="jsoup_settings">Enable Jsoup library: </string>
    <string name="helptext">Please select 6 images</string>


    <string name="game_welcome">Welcome to the memory game!</string>
    <string name="pause_button_text">Pause</string>
    <string name="resume_button_text">Resume</string>
    <string name="back_button_text">Back</string>
    <string name="paused_text">PAUSED</string>

    <string name="your_best_score">Your Best Score</string>
    <string name="your_current_score">Your Current Score</string>
    <string name="highscore_first">1ST</string>
    <string name="highscore_second">2ND</string>
    <string name="highscore_third">3RD</string>
    <string name="highscore_fourth">4TH</string>
    <string name="highscore_fifth">5TH</string>
    <string name="reset_button">Reset Scores</string>

    <string name="match_counter">Matches</string>
    <string name="timer_counter">Timer</string>
    <string name="default_matches">0 out of 6</string>
    <string name="default_time">00:00:00</string>

    <!-- Game Hint -->
    <string name="default_game_hint">Please open a pair of images.</string>
    <string name="non_matching_pair">Oops! Try Again!</string>
    <string name="matching_pair_found">Great! Find the next pair!</string>
    <string name="win_game">Congratulations! You won the game.</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>

    <!-- Score Comment -->
    <string name="default_score_comment">You can do better!</string>
    <string name="best_score_comment">Congrats! Your best time!</string>

    <string-array name="fetch_choices">
        <item>All</item>
        <item>6</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
    </string-array>

    <string-array name="grid_choices">
        <item>3</item>
        <item>1</item>
        <item>2</item>
        <item>4</item>
    </string-array>

    <string-array name="glide_choices">
        <item>No</item>
        <item>Yes</item>
    </string-array>

    <string-array name="jsoup_choices">
        <item>No</item>
        <item>Yes</item>
    </string-array>

    <string-array name="suggested_urls">
        <item>https://stocksnap.io</item>
        <item>https://freestocks.org</item>
        <item>https://picography.co</item>
        <item>https://www.gratisography.com/</item>
        <item>https://www.reshot.com/</item>
    </string-array>
</resources>